syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/JaidenShall/simplebank/pb";

message DepositRequest {
    int64 account_id = 1;
    int64 amount = 2; // Amount in cents/smallest currency unit
}

message DepositResponse {
    int64 id = 1;
    string owner = 2;
    int64 balance = 3;
    string currency = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}